--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/JQuery/Mom.js?v=3"></script>
+<input type="hidden" id="hdnExistingNotificationsId" value="" />
 <!-- body section start -->
 <div>
     <div class="container-fluid">
@@ -14,7 +15,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12">
                                 <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/planameeting.png" alt="" style="margin-right:15px;"><b>Schedule new meeting</b></h4>
-                                <input type="hidden" id="hdnNId" value="" />
+                                @*<input type="hidden" id="hdnNId" value="" />*@
                             </div>
                         </div>
                     </div>
@@ -26,8 +27,12 @@
                     <div class="row darkBlueblackbackground padding-10">
                         <h4 class="white-color pull-left" style="padding-left:5px;"><b>Schedule new meeting</b></h4>
                         <div class="col-xs-12 col-sm-6 col-md-4 pull-right">
-                            <span class="glyphicon glyphicon-search form-control-feedback"></span>
-                            <input type="text" id="txtSearch" class="form-control pull-right" placeholder="Search" />
+                            <div class="input-group">
+                                <input class="form-control" id="txtSearch" autocomplete="off" placeholder="Search">
+                                <span class="input-group-btn" data-CallFor="All" onclick="return SearchNotifications(this);">
+                                    <button type="submit" class="btn btn-blue"><i class="glyphicon glyphicon-search"></i></button>
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -77,7 +82,7 @@
                                                         </label>
                                                     </div>
                                                 </th>
-                                                <th class="col-md-3" rowspan="3" style="width:35%;">Notification No.</th>
+                                                <th class="col-md-3" rowspan="3" style="width:35%;">Notification</th>
                                                 <th class="col-md-1 text-center" rowspan="3" style="width:10%;">Final Date of Comments</th>
                                                 <th class="col-md-1 text-center" rowspan="3" style="width:10%;">Country</th>
                                                 <th style="width:10%;"> Status</th>
@@ -123,7 +128,7 @@
                                                             <textarea class="form-control textboxcontrol AutoHeight" cols="30" rows="1" id="txtMeetingNote_@objMOM.ItemNumber">@objMOM.MeetingNote</textarea>
                                                         </td>
                                                         <td>
-                                                            <input type="text" class="form-control textboxcontrol" id="txtNotificationGroup_@objMOM.ItemNumber" value="@objMOM.NotificationGroup" />
+                                                            <input type="text" class="form-control textboxcontrol" maxlength="5" id="txtNotificationGroup_@objMOM.ItemNumber" value="@objMOM.NotificationGroup" />
                                                         </td>
                                                     </tr>
                                                 }
