--- a/WTO/Views/MoM/Edit.cshtml
+++ b/WTO/Views/MoM/Edit.cshtml
@@ -21,7 +21,6 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12">
                                 <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/planameeting.png" alt="" style="margin-right:15px;"><b>@(ViewBag.Id > 0 ? "Plan action" : "Current meeting")</b></h4>
-                                <input type="hidden" id="hdnNId" value="" />
                             </div>
                         </div>
                     </div>
@@ -32,7 +31,15 @@
             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                 <div class="col-xs-12 col-sm-12 col-md-12">
                     <div class="row darkBlueblackbackground padding-10">
-                        <h4 class="white-color" style="padding-left:5px;"><b>@(ViewBag.Id > 0 ? "Plan action" : "Current meeting")</b></h4>
+                        <h4 class="white-color pull-left" style="padding-left:5px;"><b>@(ViewBag.Id > 0 ? "Plan action" : "Current meeting")</b></h4>
+                        <div class="col-xs-12 col-sm-6 col-md-4 pull-right">
+                            <div class="input-group">
+                                <input class="form-control" id="txtSearch" autocomplete="off" placeholder="Search">
+                                <span class="input-group-btn" data-CallFor="@Request["CallFor"]" onclick="return SearchMeetingNotifications(this);">
+                                    <button type="submit" class="btn btn-blue"><i class="glyphicon glyphicon-search"></i></button>
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -56,19 +63,19 @@
                                         var id = Request.Url.Segments[3];
                                         if (Convert.ToInt32(id) > 0)
                                         {
-                                            <a class="btn btn-blue pull-right btn-padding addsavenotification " hidden"" style="margin-left:4%" href="@Url.Action("Index", "MoM")"><img src="/contents/img/back-16.png"> Back </a>
+                                            <a class="btn btn-blue pull-right btn-padding addsavenotification hidden" style="margin-left:4%" href="@Url.Action("Index", "MoM")"><img src="/contents/img/back-16.png"> Back </a>
                                         }
                                     }
                                     <button id="btnSaveUpdate" class="btn btn-dark-green pull-right btn-padding addsavenotification hidden" onclick="return Validate();"><img src="/contents/img/save.png"> @(Model.MoMId > 0 ? "Update" : "Save")</button>
                                 </div>
                             </div>
-                                        }
-                                        else
-                                        {
-                                            <div>
-                                                <h2><center> No meeting has been scheduled yet.</center></h2>
-                                            </div>
-                                        }
+                        }
+                        else
+                        {
+                            <div>
+                                <h2><center> No meeting has been scheduled yet.</center></h2>
+                            </div>
+                        }
                     </div>
 
                     <div class="row">
@@ -76,20 +83,20 @@
                             <div class="table-responsive notificationlist top-offset-20">
                                 @if (Model.Notifications != null && Model.Notifications.Count > 0)
                                 {
-                                    <table class="table display" id="tblNotificationMoM" cellspacing="0" style="border:1px solid #ccc; width:99.9%;">
+                                    <table class="table display table-fixed" id="tblNotificationMoM" cellspacing="0" style="border:1px solid #ccc; width:99.9%;">
                                         <thead class="second-blackbackground">
                                             <tr style="border-bottom: 1px solid transparent !important;">
-                                                <th class="col-md-3" rowspan="2" style="width:35%;">Notification</th>
-                                                <th class="col-md-1 text-center" rowspan="2" style="width:10%;">Country</th>
-                                                <th class="col-md-5 text-center" colspan="5">Action</th>
-                                                <th class="text-center" rowspan="2" style="width:5%;"></th>
+                                                <th rowspan="2" class="width-35">Notification</th>
+                                                <th class="text-center width-10" rowspan="2">Country</th>
+                                                <th class="text-center width-50" colspan="5">Action</th>
+                                                <th class="text-center width-5" rowspan="2"></th>
                                             </tr>
-                                            <tr class="no-border">
+                                            <tr class="no-border padding-left-45">
                                                 @if (Model.Actions != null)
                                                 {
                                                     foreach (BusinessObjects.MOM.Action item in Model.Actions)
                                                     {
-                                                        <th class="text-center">@item.ActionName</th>
+                                                        <th class="text-center width-18">@item.ActionName</th>
                                                     }
                                                 }
                                             </tr>
@@ -100,10 +107,16 @@
                                                 foreach (BusinessObjects.MOM.Notification_Mom objMOM in Model.Notifications)
                                                 {
                                                     <tr>
-                                                        <td>
+                                                        <td class="width-35">
                                                             <a href="@Url.Action("NotificationView", "WTO", new { Id = objMOM.NotificationId, MOMId = @Model.MoMId,R=objMOM.RowNum,Total=objMOM.TotalRow})" class="red-color" target="_blank"><p class="red-color NotiNumber" data-toggle="tooltip" data-placement="bottom" title="@Html.Raw(HttpUtility.HtmlDecode(objMOM.Description))">@objMOM.NotificationNumber</p></a>
                                                             <p style="word-wrap:break-word; width:450px;">
                                                                 <b>Title: </b> @objMOM.Title
+                                                            </p>
+                                                            <p>
+                                                                @if (objMOM.NotificationGroup != "")
+                                                                {
+                                                                    <b>Group : </b><span>@objMOM.NotificationGroup</span>
+                                                                }
                                                             </p>
                                                             <p>
                                                                 @if (objMOM.MeetingNote != "")
@@ -114,10 +127,9 @@
                                                                 {
                                                                     <b><a onclick="OpenAddNote(@objMOM.NotificationId)">Note</a></b><span id="MeetingNoteId"></span>
                                                                 }
-                                                                @Html.Hidden("hdnNotificationId", @objMOM.NotificationId)
                                                             </p>
                                                         </td>
-                                                        <td class="text-center">@objMOM.Country</td>
+                                                        <td class="text-center width-10">@objMOM.Country</td>
 
                                                         @foreach (BusinessObjects.MOM.Action item in Model.Actions)
                                                         {
@@ -126,38 +138,36 @@
                                                                 var Action = Model.NotificationActions.FirstOrDefault(x => x.NotificationId == objMOM.NotificationId && x.ActionId == item.ActionId);
                                                                 if (Action != null && (Action.ActionId >= 4 || (Convert.ToInt32(Action.MailId) > 0 && Action.ActionId < 4)))
                                                                 {
-                                                                    <td class="text-center">
-                                                                        @*<span class="action-completed dark-green-color" id="span_@objMOM.ItemNumber"></span>*@
+                                                                    <td class="text-center width-10">
                                                                         <span class="glyphicon glyphicon-ok dark-green-color font-20" id="span_@objMOM.ItemNumber"></span>
                                                                     </td>
                                                                 }
                                                                 else if (Action != null)
                                                                 {
-                                                                    <td class="text-center">
-                                                                        @*<span class="action-pending" id="span_@objMOM.ItemNumber"></span>*@
+                                                                    <td class="text-center width-10">
                                                                         <span class="glyphicon glyphicon-hourglass dark-green-color font-20" id="span_@objMOM.ItemNumber"></span>
                                                                     </td>
                                                                 }
                                                                 else
                                                                 {
-                                                                    <td class="text-center">
+                                                                    <td class="text-center width-10">
                                                                         <span id="span_@objMOM.ItemNumber"></span>
                                                                     </td>
                                                                 }
                                                             }
                                                             else
                                                             {
-                                                                <td class="text-center"></td>
+                                                                <td class="text-center width-10"></td>
                                                             }
                                                         }
 
                                                         @if (objMOM.IsUpdate)
                                                         {
-                                                            <td class="text-center"><a data-SearchFor="@objMOM.NotificationId" onclick="EditNotificationActions(this);"><img src="~/contents/img/bedit.png" /></a></td>
+                                                            <td class="text-center width-5"><a data-SearchFor="@objMOM.NotificationId" onclick="EditNotificationActions(this);"><img src="~/contents/img/bedit.png" /></a></td>
                                                         }
                                                         else
                                                         {
-                                                            <td></td>
+                                                            <td class="width-10"></td>
                                                         }
                                                     </tr>
                                                 }
@@ -239,3 +249,15 @@
     @{ Html.RenderAction("GetNotificatioNote", "AddNotification"); }
 </div>
 <!--Meeting note Popup end-->
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        if ($(window).width() < 700) {
+            $(".table").removeClass("table-fixed");
+            $("th").removeClass("width-10 width-5 width-35 width-50 width-18 table-fixed");
+            $("td").removeClass("width-10 width-5 width-35 width-50 width-18 table-fixed");
+            $("tr").removeClass("padding-left-45 table-fixed");
+        }
+
+    })
+</script>
