--- a/WTO/Views/Partial/Dashboard/DashboardAction.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardAction.cshtml
@@ -2,7 +2,6 @@
 @{
     Layout = null;
 }
-
 <div class="row top-offset-20">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <div class="col-xs-12 col-sm-12 col-md-12 shadowbox">
@@ -32,20 +31,47 @@
                                 </tr>
                             </thead>
                             <tbody class="font-size-18">
-@foreach (BusinessObjects.Notification.NotificationPendingCount_Action ac in Model)
-{
-    <tr>
-        <td>
-            <div class="divsquar pink" style="background:@ac.ColorCode"></div>
-           @ac.Action
-        </td>
-        <td class="text-center"><span >@ac.Total</span></td>  @*class="sky-blue"*@
-        <td class="text-center">@ac.Completed</td>
-        <td class="text-center">@ac.Pending</td>
-        <td class="text-center"><span >@ac.Overdue</span></td>  @*class="light-golden-yellow"*@
-    </tr>
-}
-                               
+                                @foreach (BusinessObjects.Notification.NotificationPendingCount_Action ac in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            <div class="divsquar pink" style="background:@ac.ColorCode"></div>
+                                            @ac.Action
+                                        </td>
+                                        @if (@ac.Total > 0)
+                                        {
+                                            <td class="text-center"><span><a href="@Url.Action("Index", "NotificationList",new { PageIndex = 1, PageSize = 10, ActionId = ac.ActionId })">@ac.Total</a></span></td>  @*class="sky-blue"*@
+                                        }
+                                        else
+                                        {
+                                            <td class="text-center"><span>@ac.Total</span></td>  @*class="sky-blue"*@
+                                        }
+                                        @if (@ac.Completed > 0)
+                                        {
+                                            <td class="text-center"><a href="@Url.Action("Index", "NotificationList",new { PageIndex = 1, PageSize = 10, ActionId = ac.ActionId, ActionStatus=11 })">@ac.Completed</a></td>
+                                        }
+                                        else
+                                        {
+                                            <td class="text-center">@ac.Completed</td>
+                                        }
+                                        @if (@ac.Pending > 0)
+                                        {
+                                            <td class="text-center"><a href="@Url.Action("Index", "NotificationList",new { PageIndex = 1, PageSize = 10, ActionId = ac.ActionId,ActionStatus=9 })">@ac.Pending</a></td>
+                                        }
+                                        else
+                                        {
+                                            <td class="text-center">@ac.Pending</td>
+                                        }
+                                        @if (@ac.Overdue > 0)
+                                        {
+                                            <td class="text-center"><span><a href="@Url.Action("Index", "NotificationList",new { PageIndex = 1, PageSize = 10,ActionId = ac.ActionId,ActionStatus=10 })">@ac.Overdue</a></span></td>  @*class="light-golden-yellow"*@
+                                        }
+                                        else
+                                        {
+                                            <td class="text-center"><span>@ac.Overdue</span></td>  @*class="light-golden-yellow"*@
+                                        }
+                                    </tr>
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -54,4 +80,3 @@
         </div>
     </div>
 </div>
-
