--- a/WTO/Views/Partial/Dashboard/DashboardNotificationHistory.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardNotificationHistory.cshtml
@@ -5,23 +5,23 @@
 <script>
     var arrayNotificationGraph = [];
     arrayNotificationGraph.push(['Notification', 'Lapsed', 'In Process', 'Under Action', 'Closed', { role: 'annotation' }]);
-    function BindArrayNotificationGraph(Notification, Lapsed, InProcess, UnderAction, Closed) {
-        arrayNotificationGraph.push([Notification, Lapsed, InProcess, UnderAction, Closed, '']);
+    function BindArrayNotificationGraph(Notification,Lapsed,InProcess,UnderAction,Closed)
+    {
+        arrayNotificationGraph.push([Notification,Lapsed,InProcess,UnderAction,Closed,'']);
     }
 </script>
-
 <div class="row top-offset-20">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <div class="col-xs-12 col-sm-12 col-md-12 shadowbox padding-bottom-20">
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-8 top-offset-10">
+                <div class="col-xs-12 col-sm-6 col-md-7 top-offset-10">
                     <p class="texthead">Notification History</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 top-offset-10">
-                    <div class="btn-group pull-right">
-                        <button type="button" class="btn btn-light-green btn-padding">Yearly</button>
-                        <button type="button" class="btn btn-light-green btn-padding">Monthly</button>
-                        <button type="button" class="btn btn-light-green btn-padding">weekly</button>
+                <div class="col-xs-12 col-sm-6 col-md-5 top-offset-10">
+                    <div class="btngroup pull-right">
+                        <button type="button" id="btnYearly" class="btn btn-light-green btn-padding hidden">Yearly</button>
+                        <button type="button" id="btnMonthly" class="btn btn-light-green btn-padding" onclick="GetNotificationGraphDataMonthly()">Monthly</button>
+                        <button type="button" id="btnWeekly" class="btn btn-light-green btn-padding" onclick="GetNotificationGraphDataWeekly()">Weekly</button>
                     </div>
                 </div>
             </div>
@@ -55,12 +55,12 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12">
-                    <a href="#" class="leftArrow"><img src="~/contents/img/leftArrow.png" alt="leftArrow" /></a>
-                    <a href="#" class="rightArrow"><img src="~/contents/img/rightArrow.png" alt="rightArrow" /></a>
+                    <a class="leftArrow"><img src="~/contents/img/leftArrow.png" alt="leftArrow" onclick="BindGraphPrevious();" /></a>
+                    <a class="rightArrow"><img src="~/contents/img/rightArrow.png" alt="rightArrow" onclick="BindGraphNext();" /></a>
                     <div id="chart_div" style="width:100%;height:450px;"></div>
                 </div>
-                @foreach (BusinessObjects.Notification.NotificationGraphData ac in Model)
-                {
+             @foreach (BusinessObjects.Notification.NotificationGraphData ac in Model)
+             {
                     <script>
                         BindArrayNotificationGraph('@ac.MonthName',@ac.LapsedCount,@ac.InProcessCount,@ac.UnderActionCount,@ac.ClosedCount);
                     </script>
@@ -69,16 +69,3 @@
         </div>
     </div>
 </div>
-
-<script>
-    function drawChart() {
-        var data = google.visualization.arrayToDataTable(arrayNotificationGraph);
-        var options = {
-            chartArea: { left: 50, top: 20, width: "100%", height: "90%" },
-            legend: 'none',
-            isStacked: true,
-        };
-        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
-        chart.draw(data, options);
-    }
-</script>
