--- a/WTO/Views/Partial/Dashboard/DashboardRequestResponse.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardRequestResponse.cshtml
@@ -27,7 +27,14 @@
                                         @if (Model.objRequestForFullText.Count > 0)
                                         {
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForFullText[0].Text</p></div>
-                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForFullText[0].Count</p></div>
+                                            if (Convert.ToInt32(Model.objRequestForFullText[0].Count) > 0)
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForFullText[0].Count</a></p></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForFullText[0].Count</p></div>
+                                            }
                                         }
                                         else
                                         {
@@ -43,7 +50,14 @@
                                         @if (Model.objRequestForFullText.Count > 1)
                                         {
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForFullText[1].Text</p></div>
-                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForFullText[1].Count</p></div>
+                                            if (Convert.ToInt32(Model.objRequestForFullText[1].Count) > 0)
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForFullText[1].Count</a></p></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForFullText[1].Count</p></div>
+                                            }
                                         }
                                         else
                                         {
@@ -74,7 +88,14 @@
                                         @if (Model.objRequestForTranslation.Count > 0)
                                         {
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForTranslation[0].Text</p></div>
-                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForTranslation[0].Count</p></div>
+                                            if (Convert.ToInt32(Model.objRequestForTranslation[0].Count) > 0)
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForTranslation[0].Count</a></p></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForTranslation[0].Count</p></div>
+                                            }
                                         }
                                         else
                                         {
@@ -90,7 +111,14 @@
                                         @if (Model.objRequestForTranslation.Count > 1)
                                         {
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForTranslation[1].Text</p></div>
-                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForTranslation[1].Count</p></div>
+                                            if (Convert.ToInt32(Model.objRequestForTranslation[1].Count) > 0)
+                                            {
+                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForTranslation[1].Count</a></p></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForTranslation[1].Count</p></div>
+                                            }
                                         }
                                         else
                                         {
@@ -121,7 +149,14 @@
                                         @if (Model.objRequestForStakeholderResponse.Count > 0)
                                         {
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForStakeholderResponse[0].Text</p></div>
-                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForStakeholderResponse[0].Count</p></div>
+                                            if (Convert.ToInt32(Model.objRequestForStakeholderResponse[0].Count) > 0)
+                                            {
+                                               <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForStakeholderResponse[0].Count</a></p></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForStakeholderResponse[0].Count</p></div>
+                                            }
                                         }
                                         else
                                         {
@@ -137,7 +172,14 @@
                                         @if (Model.objRequestForStakeholderResponse.Count > 1)
                                         {
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForStakeholderResponse[1].Text</p></div>
-                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForStakeholderResponse[1].Count</p></div>
+                                            if (Convert.ToInt32(Model.objRequestForStakeholderResponse[1].Count) > 0)
+                                            {
+                                               <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForStakeholderResponse[1].Count</a></p></div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-xs-4 col-sm-4 text-right processingcount"><p>@Model.objRequestForStakeholderResponse[1].Count</p></div>
+                                            }
                                         }
                                         else
                                         {
@@ -179,7 +221,14 @@
                                 <p class="top-offset-10 font-weight-600 actiontext">Action Closed</p>
                             </div>
                             <div class="col-xs-4 col-sm-4 col-md-4 text-right">
-                                <p class="font-size-18 top-offset-10 font-weight-600 actiontextcount">@Model.ClosedCount</p>
+                                @if (Model.ClosedCount.Length > 0 && (Convert.ToInt64(Model.ClosedCount) > 0))
+                                {
+                                    <p class="font-size-18 top-offset-10 font-weight-600 actiontextcount"><a href="@Url.Action("Index", "NotificationList",new {  PageIndex = 1, PageSize = 10, StatusId = 7})">@Model.ClosedCount</a></p>
+                                }
+                                else
+                                {
+                                    <p class="font-size-18 top-offset-10 font-weight-600 actiontextcount">@Model.ClosedCount</p>
+                                }
                             </div>
                         </div>
                         <div class="row head padding-top-bottom-15 top-offset-20 shadowbox">
@@ -187,7 +236,14 @@
                                 <p class="font-size-18 top-offset-10 font-weight-600 actiontext">Lapsed</p>
                             </div>
                             <div class="col-xs-4 col-sm-4 col-md-4 text-right">
-                                <p class="font-size-18 top-offset-10 font-weight-600 actiontextcount">@Model.LapsedCount</p>
+                                @if (Model.LapsedCount.Length > 0 && (Convert.ToInt64(@Model.LapsedCount) > 0))
+                                {
+                                    <p class="font-size-18 top-offset-10 font-weight-600 actiontextcount"><a href="@Url.Action("Index", "NotificationList")">@Model.LapsedCount</a></p>
+                                }
+                                else
+                                {
+                                    <p class="font-size-18 top-offset-10 font-weight-600 actiontextcount">@Model.LapsedCount</p>
+                                }
                             </div>
                         </div>
                     </div>
