--- a/WTO/Views/Partial/ManageAccess/Country.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Country.cshtml
@@ -8,7 +8,7 @@
         <label class="table-heading">Countries (@Model.TotalCount)</label>
         <a href="#" class="btn btn-blue btn-padding pull-right" data-target="#AddCountry" onclick="AddCountryPopup();" data-toggle="modal">Add Country</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
-            <table class="table table-bordered">
+            <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
                     <tr>
                         <th class="col-sm-1">S.No</th>
@@ -26,15 +26,15 @@
                         foreach (var item in @Model.CountryList)
                         {
                             <tr>
-                                <td>@item.ItemNumber</td>
-                                <td>@item.CountryName (@item.CountryCode)</td>
-                                <td class="text-center">
+                                <td class="col-sm-1">@item.ItemNumber</td>
+                                <td class="col-sm-4">@item.CountryName (@item.CountryCode)</td>
+                                <td class="text-center col-sm-2">
                                     @if (item.EnquiryEmail_SPS != "")
                                     {
                                         <span class="glyphicon glyphicon-ok dark-green-color"></span>
                                     }
                                 </td>
-                                <td class="text-center">
+                                <td class="text-center col-sm-2">
                                     @if (item.EnquiryEmail_TBT != "")
                                     {
                                         <span class="glyphicon glyphicon-ok dark-green-color"></span>
@@ -42,14 +42,14 @@
                                 </td>
                                 @if (@item.Status == 1)
                                 {
-                                    <td>Active</td>
+                                    <td class="col-sm-1">Active</td>
                                 }
                                 else
                                 {
-                                    <td>Inactive</td>
+                                    <td class="col-sm-1">Inactive</td>
                                 }
-                                <td class="text-center"><a href="#" onclick="EditCountryData(@item.CountryId);"><span class="glyphicon glyphicon-edit"></span></a></td>
-                                <td class="text-center"><a href="#" class='@(@item.IsInUse? "hidden":"")' onclick="Confirm('Delete','Do you want to delete the @item.CountryName ?','Yes', 'No', 'DeleteCountry(@item.CountryId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
+                                <td class="text-center col-sm-1"><a href="#" onclick="EditCountryData(@item.CountryId);"><span class="glyphicon glyphicon-edit"></span></a></td>
+                                <td class="text-center col-sm-1"><a href="#" class='@(@item.IsInUse? "hidden":"")' onclick="Confirm('Delete','Do you want to delete the @item.CountryName ?','Yes', 'No', 'DeleteCountry(@item.CountryId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
                             </tr>
                         }
                     }
@@ -64,3 +64,13 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        if ($(window).width() < 700) {
+            $(".table").removeClass("table-fixed");
+            $("th").removeClass("col-sm-1 col-sm-2 col-sm-4 table-fixed");
+            $("td").removeClass("col-sm-1 col-sm-2 col-sm-4 table-fixed");
+        }
+    });
+</script>
