--- a/WTO/contents/css/css/comman.css
+++ b/WTO/contents/css/css/comman.css
@@ -1365,3 +1365,94 @@ a, a:hover, a:focus, a:active {
 .font-20 {
     font-size: 20px;
 }
+
+
+
+.table-fixed {
+    margin-bottom: 0px !important;
+}
+.table-fixed tbody {
+	max-height: 280px;
+	overflow-y: auto;
+	width: 100%;
+}
+.table-fixed thead,
+.table-fixed tbody,
+.table-fixed tr,
+.table-fixed td,
+.table-fixed th {
+	display: block;
+	height:auto;
+}
+.table-fixed tr:after {
+	content: "";
+	display: block;
+	visibility: hidden;
+	clear: both;
+}
+.table-fixed tbody td,
+.table-fixed thead > tr > th {
+	float: left;
+}
+
+.width-25
+{
+	width:25%;
+}
+.width-15
+{
+	width:14%;
+}
+.width-60
+{
+	width:60%;
+}
+
+.width-12
+{
+	width:12%;
+}
+.width-14
+{
+	width:14%;
+}
+.padding-left-14
+{
+	padding-left:14%;
+}
+.padding-left-45
+{
+	padding-left:45%;
+}
+.width-20
+{
+	width:20%;
+}
+.width-10
+{
+	width:10%;
+}
+.width-35
+{
+	width:35%;
+}
+.width-30
+{
+	width:30%;
+}
+.width-5
+{
+	width:5%;
+}
+.width-50
+{
+	width:50%;
+}
+.width-18
+{
+	width:18% !important;
+}
+.width-10
+{
+	width:10%;
+}
